[package]
name = "tm-light-client"
version = "0.1.0"
edition = "2021"

[dependencies]

# Tendermint dependencies
tendermint = { version = "0.38.1", default-features = false }
tendermint-light-client = { version = "0.38.1", default-features = false }
tendermint-light-client-detector = { version = "0.38.1", default-features = false }
tendermint-light-client-verifier = { version = "0.38.1", default-features = false }
tendermint-proto = { version = "0.38.1" }
tendermint-rpc = { version = "0.38.1" }
tendermint-testgen = { version = "0.38.1" }
flex-error = { version = "0.4.4", default-features = false }
